--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
 
+        CHANGES IN spatstat.utils VERSION 1.14-0
+
+NEW FUNCTIONS
+
+    o taperoff
+    Utility for tapering values smoothly to zero.
+    
+
+        CHANGES IN spatstat.utils VERSION 1.13-0
+
+OVERVIEW
+
+    o internal bug fix.
+
         CHANGES IN spatstat.utils VERSION 1.12-0
 
 NEW FUNCTIONS
