--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.utils VERSION 1.14-1
+
+OVERVIEW
+
+    o Minor administrative changes.
+
         CHANGES IN spatstat.utils VERSION 1.14-0
 
 NEW FUNCTIONS
