--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.utils VERSION 1.15-0
+
+OVERVIEW
+
+    o Added more internal code.
+
+
         CHANGES IN spatstat.utils VERSION 1.14-1
 
 OVERVIEW
