Tweaks and more tests

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.utils VERSION 2.1-0.002
+
+OVERVIEW
+
+    o Tweaks.
+    
+
         CHANGES IN spatstat.utils VERSION 2.1-0
 
 OVERVIEW
