--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.utils VERSION 2.3-0.001
+
+OVERVIEW
+
+    o Minor improvements and bug fixes.
+
         CHANGES IN spatstat.utils VERSION 2.3-0
 
 OVERVIEW
