Remove stray references to spatstat.core

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 
-        CHANGES IN spatstat.utils VERSION 2.3-1.001
+        CHANGES IN spatstat.utils VERSION 2.3-1.002
 
 OVERVIEW
 
-    o Minor change to package information.
+    o Minor changes to package information.
     
 SIGNIFICANT USER-VISIBLE CHANGES
 
