--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 
-        CHANGES IN spatstat.utils VERSION 2.3-1.002
+        CHANGES IN spatstat.utils VERSION 2.3-1.003
 
 OVERVIEW
 
     o Minor changes to package information.
+
+    o Bug fixes
     
 SIGNIFICANT USER-VISIBLE CHANGES
 
@@ -11,6 +13,12 @@ SIGNIFICANT USER-VISIBLE CHANGES
     'spatstat.utils' now suggests the new package 'spatstat.model'
     instead of the old 'spatstat.core'.
 
+BUG FIXES
+
+    o do.call.matched
+    Crashed if 'matchfirst=TRUE' and 'names(arglist) = NULL'.
+    Fixed.
+    
         CHANGES IN spatstat.utils VERSION 2.3-1
 
 OVERVIEW
