--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.utils VERSION 3.0-2
+
+OVERVIEW
+
+    o Modest improvements in speed.
+
+
         CHANGES IN spatstat.utils VERSION 3.0-1
 
 OVERVIEW
