--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
 
-        CHANGES IN spatstat.utils VERSION 3.0-1.004
+        CHANGES IN spatstat.utils VERSION 3.0-1.005
 
 OVERVIEW
 
     o Modest improvements in speed.
 
+    o Minor changes to package information.
 
         CHANGES IN spatstat.utils VERSION 3.0-1
 
