--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,15 @@
 
+        CHANGES IN spatstat.utils VERSION 3.0-2.001
+
+OVERVIEW
+
+    o Minor improvements.
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o asNumericMatrix
+    Argument x can be a list, provided it can be converted to a data frame.
+    
         CHANGES IN spatstat.utils VERSION 3.0-2
 
 OVERVIEW
