--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.utils VERSION 3.0-3.001
+
+OVERVIEW
+
+    o Improved error messages.
+
         CHANGES IN spatstat.utils VERSION 3.0-3
 
 OVERVIEW
