--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.utils VERSION 3.0-5.003
+        CHANGES IN spatstat.utils VERSION 3.0-5.004
 
 OVERVIEW
 
@@ -7,11 +7,19 @@ OVERVIEW
 
     o spatstat.utils now requires R 3.5.0 or later.
 
+    o Bug fix
+    
 SIGNIFICANT USER-VISIBLE CHANGES
 
     o primefactors, divisors, is.prime
     Computation for large numbers accelerated.
 
+BUG FIXES
+
+    o xysegPcircle
+    Interpreted its arguments incorrectly,
+    and incorrectly gave the same result as 'xysegXcircle'.
+    Fixed.
 
         CHANGES IN spatstat.utils VERSION 3.0-5
 
