--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.utils VERSION 3.1-1.001
+
+OVERVIEW
+
+    o Internal improvements.
+
+
         CHANGES IN spatstat.utils VERSION 3.1-1
 
 OVERVIEW
