--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 
+        CHANGES IN spatstat.utils VERSION 3.1-2.001
+
+OVERVIEW
+
+    o Recognise powers of an integer.
+
+NEW FUNCTIONS
+
+    o is.square, is.cube, is.power
+    Recognise whether a given integer is a square number, a cube,
+    or a power of another integer.
+    
+
         CHANGES IN spatstat.utils VERSION 3.1-2
 
 OVERVIEW
