--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.utils VERSION 3.1-2.001
+        CHANGES IN spatstat.utils VERSION 3.1-2.002
 
 OVERVIEW
 
@@ -11,6 +11,10 @@ NEW FUNCTIONS
     Recognise whether a given integer is a square number, a cube,
     or a power of another integer.
     
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o primefactors
+    Computation for large numbers improved.
 
         CHANGES IN spatstat.utils VERSION 3.1-2
 
