--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,16 @@
 
+        CHANGES IN spatstat.utils VERSION 3.1-3.001
+
+OVERVIEW
+
+    o Extension to 'fastFindInterval'.
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o fastFindInterval
+    New argument 'left.open' controls whether intervals
+    are left-open, right-closed or left-closed, right-open.
+
         CHANGES IN spatstat.utils VERSION 3.1-3
 
 OVERVIEW
