--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 
-        CHANGES IN spatstat.utils VERSION 3.1-3.001
+        CHANGES IN spatstat.utils VERSION 3.1-3.002
 
 OVERVIEW
 
     o Extension to 'fastFindInterval'.
+
+    o Internal improvements.
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
