--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.utils VERSION 3.1-4.001
+
+OVERVIEW
+
+    o Internal improvements.
+
         CHANGES IN spatstat.utils VERSION 3.1-4
 
 OVERVIEW
