--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.utils VERSION 3.1-5.001
+
+OVERVIEW
+
+    o spatstatLocator now supports `snap' behaviour (rounding).
+
         CHANGES IN spatstat.utils VERSION 3.1-5
 
 OVERVIEW
